Bug 444954 - Discover flatpak "Check for Updates" either doesn't work or else is too fast for the user to notice that it worked
Summary: Discover flatpak "Check for Updates" either doesn't work or else is too fast ...
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Flatpak Backend (other bugs)
Version First Reported In: 5.23.2
Platform: Flatpak Linux
: NOR minor
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2021-11-04 15:10 UTC by yizel7
Modified: 2021-11-12 15:01 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description yizel7 2021-11-04 15:10:28 UTC
Currently when a user clicks the Check for Updates button inside Discover, it does not seem Discover actually checks for updates. At least from he users perspective. Normally when you launch Discover the whole UI says "Fetching updates..." with a loading bar. If Discover does indeed check for updates after it is launched and this button is clicked, the UI should indicate in some manner that the update check happened.

STEPS TO REPRODUCE
1. Install flatpak and some flatpaks
2. Wait a couple days if needed for updates to appear
3. Launch Discover and it will check for flatpak updates
4. While still in Discover, click the "Check for Updates' button in the top right beside "Update All"

OBSERVED RESULT
The button appears to be clicked but nothing happens from the users perspective.

EXPECTED RESULT
Discover would check if there are any updates for flatpaks after clicking the button.

SOFTWARE/OS VERSIONS
OS: Arch Linux x86_64
Kernel: 5.14.15-arch1-1
(available in About System)
KDE Plasma Version: 5.23.2
KDE Frameworks Version: 5.87.0
Qt Version: 5.15.2
Graphics Platform: X11

Dolphin flatpak version: 21.08.2
Flatpak version: flatpak 1.12.2-1
Flatseal version: 1.7.4
Comment 1 yizel7 2021-11-08 18:53:53 UTC
Now I know for sure it doesn't do anything, at least for flatpaks. Today there was an issue with flathub that would throw an error at the bottom upon launching Discover

Error updating appstream2: no such ref 'appstream2/x86_64' in remote flathub; Error updating appstream2: no such ref 'appstream2/x86_64' in remote flathub;

but when you click Check for Updates after it has already launched and the error faded away, the error did not appear again. If the Check for Updates did anything, it would have shown the error again in the bottom.
Comment 2 Nate Graham 2021-11-09 03:56:18 UTC
Can reproduce by loading only the Flatpak backend with `plasma-discover --backends flatpak-backend` and clicking "Check for updates". If it's doing anything, it's so fast that the user can't tell!
Comment 3 Aleix Pol 2021-11-10 01:25:29 UTC
Git commit 375aae3b2975bf2115b5eb55b116d5a736327e80 by Aleix Pol.
Committed on 10/11/2021 at 01:25.
Pushed by apol into branch 'master'.

flatpak: Also fetch metadata when checking for updates

M  +34   -19   libdiscover/backends/FlatpakBackend/FlatpakBackend.cpp
M  +1    -0    libdiscover/backends/FlatpakBackend/FlatpakBackend.h

https://invent.kde.org/plasma/discover/commit/375aae3b2975bf2115b5eb55b116d5a736327e80