flatpak: Also fetch metadata when checking for updates

BUG: 444954